# reproducible-builds

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  config.yaml  generate_chart_data.py  git.py  pixi.toml  plot.py  pyproject.toml  repro.db  util.py
.github/workflows/: backfill-diffs-to-r2.yaml  build-and-rebuild.yaml  pre-commit.yaml  repro.yaml  test.yaml  v1-sample-rebuild.yaml
artifacts/: boltons-23.0.0-pyh4616a5c_0.conda
build_info/ubuntu/: ubuntu_22.04_20.04_rebuild_info.json  ubuntu_22.04_build_info.json
build_outputs/noarch/: repodata.json
data/: chart_data.csv  chart_data_2024-05-10.txt  history.json
docs/: index.html  v1.html
recipes/: recipe.yaml
recipes/_libgcc_mutex/: recipe.yaml  variants.yaml
recipes/_openmp_mutex/: meta.yaml  recipe.yaml
recipes/aom/: 0001-Fix-compilation-flags-for-win32.patch  0002-Remove-all-reference-of-aom_static.patch  bld.bat  build.sh  meta.yaml  recipe.yaml
recipes/argon2-cffi-bindings/: recipe.yaml
recipes/boltons/: recipe.yaml
recipes/brotli/: install_python.bat  recipe.yaml
recipes/brotlipy/: meta.yaml  recipe.yaml
recipes/c-ares/: recipe.yaml
recipes/ca-certificates/: build.bat  meta.yaml  recipe.yaml
recipes/conda/: meta.yaml  recipe.yaml
recipes/contourpy/: build.bat  build.sh  recipe.yaml
recipes/cycler/: recipe.yaml
recipes/cython/: meta.yaml  recipe.yaml  run_test.py
recipes/dartsim/: bld.bat  build.sh  disable_gui.patch  meta.yaml  (+2 more)
tests/: conftest.py  test_aggregation.py  test_build.py  test_command.py  test_generate_recipes.py  test_recipe.py  test_recipe_db.py
(+307 files in other folders)
