[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repror"
version = "0.0.1"
authors = [
  { name="Nichita Morcotilo", email="nichita@prefix.dev" },
]
description = "verify repro of rattler-build"
readme = "README.md"
requires-python = "~=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "recipes/"
]
