[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "repror"
version = "0.0.1"
authors = [{ name = "Nichita Morcotilo", email = "nichita@prefix.dev" }]
description = "verify repro of rattler-build"
readme = "README.md"
requires-python = "~=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
repror = "repror.repror:app"
convert-conda-recipe = "repror.convert_conda_recipe:app"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = ["recipes/"]

[tool.pyright]
venv = "default"
pythonVersion = "3.12"
venvPath = ".pixi/envs"
ignore = ["recipes/**"]
exclude = ["recipes/**", ".pixi/**", ".pytest_cache/**", "**/__pycache__"]
